[tool.poetry]
name = "plugin.video.eixodomal"
version = "0.1.0"
description = "Kodi addon to access episodes of the program Eixo do Mal"
authors = ["Rodolfo Marques"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
